--- a/pub/style/style.css
+++ b/pub/style/style.css
@@ -1,6 +1,6 @@
 body { display: flex; flex-wrap: wrap; font-family: sans-serif; }
 header { flex-basis: 100%; flex-shrink: 0; }
-article { padding-left: 1em; }
+article { padding-left: 1em; max-width: 50em; }
 footer { flex-basis: 100%; flex-shrink: 0; }
 header nav { display: flex; justify-content: space-between; }
 nav a, header a { text-decoration: none ; color: inherit; }
